# openai-sensevoice-stt

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  funasr_http_client.py  funasr_http_server.py  pyproject.toml  test_speed.py
